--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Make errors friendly in Node.js",
   "main": "lib/index.js",
   "scripts": {
-    "build": "babel src -d lib"
+    "build": "rm -rf lib; babel src -d lib"
   },
   "files": [
     "lib"
