--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
     "google": "^2.1.0",
+    "http-proxy-agent": "^1.0.0",
     "node-fetch": "^1.6.3",
-    "simple-spinner": "0.0.5"
+    "simple-spinner": "0.0.5",
+    "socks5-https-client": "^1.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
