--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   ],
   "author": "pd4d10 <pd4d10@gmail.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pd4d10/friendly-error.git"
+  },
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "chalk": "^1.1.3",
